--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@graphql-tools/schema": "^10.0.2",
     "apollo-server-express": "^3.13.0",
     "express": "^4.18.2",
+    "graphiql": "^3.1.1",
     "graphql": "^16.8.1",
     "mongoose": "^8.1.2"
   },
