--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "express": "^4.18.2",
     "graphiql": "^3.1.1",
     "graphql": "^16.8.1",
-    "mongoose": "^8.1.2"
+    "mongoose": "^8.1.2",
+    "mongoose-sequence": "^6.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.1.0"
   }
 }
